project(
    'Cuarzo',
    'c', 'cpp',
    version : '0.1.0',
    meson_version: '>= 0.60.0',
    default_options: [
        'warning_level=2',
        'cpp_std=c++20',
    ]
)

cz_skia_proj    = subproject('cz-skia')
cz_core_proj    = subproject('cz-core')
cz_xdgkit_proj  = subproject('cz-xdgkit')
cz_ream_proj    = subproject('cz-ream')
cz_srm_proj     = subproject('cz-srm')
cz_louvre_proj  = subproject('cz-louvre')
cz_kay_proj     = subproject('cz-kay')
cz_marco_proj   = subproject('cz-marco')

cz_crystals_proj   = subproject('cz-crystals')
